=================
Changes for Crate
=================

Unreleased
==========

 - Added support for unicast host discovery via EC2 API

 - BREAKING CHANGE
   Connections to AWS S3 for ``COPY FROM`` and ``COPY TO`` are now using HTTPS.
   If you have previously blocked outgoing connections on ``443``, please update
   your firewall settings!

 - Fixed a rare bug which could cause a MapperParsingException if one creates
   a new dynamic array concurrently

 - Improved handling of /_blobs REST URIs to prevent invalid URIs from being
   passed to main handler where they raise missleading error messages

 - Updated crate-admin to 0.14.2 which includes the following changes:

   - added support for line breaks in console result table

 - Added column policy as column to ``information_schema.tables`` table

 - Fix: column policy property was missing in SHOW CREATE TABLE result

 - Added SHOW CREATE TABLE statement to dump the schema of a user created table

 - Updated crash to 0.13.1 which contains following changes:

   - added multiline support for tabular output format

 - Expose missing refresh_interval table setting in information_schema.tables.

 - Added support for multiple tables in refresh statement.

 - Added ``date_format`` scalar function

2015/07/16 0.50.1
=================

 - Updated crate-admin to 0.14.1 which includes following changes:

   - fix: number of underreplicated shards were fetched and displayed incorrectly

   - load plugins.json that can inject additional modules on app start
     the "Get Started" tutorial is now implemented as a plugin

   - fix: approximate number of underreplicated and missing records per table was
     calculated incorrectly, which could have lead to different results
     when viewing table info on admin ui of different nodes

   - fix: automatically refresh load history chart on overview page

 - Fixed a bug which prevented a retry, or caused a retry to fail if a shard
   was closed because of relocation
