@@ -121,11 +121,11 @@ currently applied cluster settings.
     | settings['indices']                                                               | object    |
     | settings['indices']['recovery']                                                   | object    |
     | settings['indices']['recovery']['concurrent_streams']                             | integer   |
-    | settings['indices']['recovery']['file_chunk_size']                                | long      |
+    | settings['indices']['recovery']['file_chunk_size']                                | string    |
     | settings['indices']['recovery']['translog_ops']                                   | integer   |
-    | settings['indices']['recovery']['translog_size']                                  | long      |
+    | settings['indices']['recovery']['translog_size']                                  | string    |
     | settings['indices']['recovery']['compress']                                       | boolean   |
-    | settings['indices']['recovery']['max_bytes_per_sec']                              | long      |
+    | settings['indices']['recovery']['max_bytes_per_sec']                              | string    |
     | settings['indices']['recovery']['retry_delay_state_sync']                         | string    |
     | settings['indices']['recovery']['retry_delay_network']                            | string    |
     | settings['indices']['recovery']['internal_action_timeout']                        | string    |
@@ -134,7 +134,7 @@ currently applied cluster settings.
     | settings['indices']['store']                                                      | object    |
     | settings['indices']['store']['throttle']                                          | object    |
     | settings['indices']['store']['throttle']['type']                                  | string    |
-    | settings['indices']['store']['throttle']['max_bytes_per_sec']                     | long      |
+    | settings['indices']['store']['throttle']['max_bytes_per_sec']                     | string    |
     | settings['indices']['fielddata']                                                  | object    |
     | settings['indices']['fielddata']['breaker']                                       | object    |
     | settings['indices']['fielddata']['breaker']['limit']                              | string    |
