@@ -5,6 +5,10 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: fixed an issue which caused TypeConversion errors if a setting was
+   selected which represents a byte size
+   (e.g. indices[‘store’][‘throttle’][‘my_bytes_per_sec’])
+
  - Added support for unicast host discovery via EC2 API
 
  - BREAKING CHANGE
